force-app/main/default/objects/Artist_Fees__c/Artist_Fees__c.object-meta.xml
<CustomObject>
    <description>Contains the Artist Rates</description>
    <label>Artist Fee</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Artist Fees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>