force-app/main/default/objects/Artist_Fees__c/fields/Accommodation__c.field-meta.xml
<CustomField>
    <fullName>Accommodation__c</fullName>
    <description>Notes on the Accommodation requirements for this configuration</description>
    <label>Accommodation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>