force-app/main/default/objects/Artist_Fees__c/fields/Active_Fee__c.field-meta.xml
<CustomField>
    <fullName>Active_Fee__c</fullName>
    <description>This is checked if this fee is currently active</description>
    <formula>IF(TODAY()&gt;Fee_Start_Date__c &amp;&amp;
			OR(TODAY()&lt; Fee_End_Date__c,ISBLANK(Fee_End_Date__c)),
				True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Fee</label>
    <type>Checkbox</type>
</CustomField>