force-app/main/default/objects/Artist_Fees__c/fields/Fee_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Fee_Start_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Fee Start Date</label>
    <type>Date</type>
</CustomField>