force-app/main/default/objects/Artist_Fees__c/fields/MC_Performance__c.field-meta.xml
<CustomField>
    <fullName>MC_Performance__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If the Fee is for MC&apos;ing an event</inlineHelpText>
    <label>MC Performance</label>
    <type>Checkbox</type>
</CustomField>