force-app/main/default/objects/Artist_Fees__c/fields/Meals__c.field-meta.xml
<CustomField>
    <fullName>Meals__c</fullName>
    <description>Notes on the meal requirements for this configuration</description>
    <label>Meals</label>
    <length>255</length>
    <type>Text</type>
</CustomField>