force-app/main/default/objects/Artist_Fees__c/fields/Performance_Duration__c.field-meta.xml
<CustomField>
    <fullName>Performance_Duration__c</fullName>
    <label>Performance Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Performance_Duration</valueSetName>
    </valueSet>
</CustomField>