force-app/main/default/objects/Artist_Fees__c/fields/Singing_Performance__c.field-meta.xml
<CustomField>
    <fullName>Singing_Performance__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If the fee is for singing</inlineHelpText>
    <label>Singing Performance</label>
    <type>Checkbox</type>
</CustomField>