force-app/main/default/objects/Artist_Fees__c/fields/Solo_or_Band__c.field-meta.xml
<CustomField>
    <fullName>Solo_or_Band__c</fullName>
    <description>Determines if this fee includes a band</description>
    <label>Solo or Band</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Solo_or_with_Band</valueSetName>
    </valueSet>
</CustomField>