force-app/main/default/objects/Artist_Fees__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Determines if this is the standard fee or a special rate for weekdays etc</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard Fee</fullName>
                <default>true</default>
                <label>Standard Fee</label>
            </value>
            <value>
                <fullName>Special Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>