force-app/main/default/objects/Artist_Fees__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Meals__c</columns>
    <columns>Accommodation__c</columns>
    <columns>Accommodation_and_Meals__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>